# ltfat

./: .gitattributes  .gitignore  .gitmodules  1.txt  AUTHORS  CITATION  CMakeLists.txt  COPYING  ChangeLog  Contents.m  INSTALL  INSTALL-Matlab  INSTALL-Octave  LICENSE  Makefile  Makefile.in  Makefile_crossmingw  Makefile_mingw  Makefile_mingw32  Makefile_mingw64  Makefile_octpkg.in  Makefile_unix  NEWS  README  README.md  c-safe-memalloc.c  chirpzt.m  ci_script.m  ciutils.c  ciutils.h  comptarget.mk  config.h  configure.ac  copyrightplate  dct.c  dgt.c  dgt_fac.c  dgt_fb.c  dgt_long.h  dgt_multi.c  (+74 more)
auditory/: Contents.m  audfiltbw.m  audfilters_fir2.asv  audfilters_fir2.m  audspace.m  audspacebw.m  audtofreq.m  erbspace.m  erbspacebw.m  erbtofreq.m  freqtoaud.m  freqtoerb.m  gammatonefir.m  rangecompress.m  rangeexpand.m  semiaudplot.m
blockproc/: Contents.m  block.m  block_fwt.m  block_ifwt.m  blockana.m  blockdevices.m  blockdone.m  blockfigure.m  blockframeaccel.m  blockframepairaccel.m  blockpanel.m  blockpanelget.m  blockplay.m  blockplot.m  blockprocinit.m  blockread.m  blocksyn.m  blockwrite.m  ltfatplay.m
comp/: arg_apply_norm.m  arg_filterbankdual.m  arg_firwin.m  arg_freqtoaud.m  arg_freqwavelet.m  arg_fusionframe.m  arg_fwt.m  arg_fwtext.m  arg_gabphasederivconv.m  arg_groupthresh.m  arg_longwin.m  arg_ltfattranslate.m  arg_normalize.m  arg_plotfilterbank.m  arg_setnorm.m  arg_tfplot.m  arg_thresh.m  arg_uwfbtcommon.m  arg_wfbtcommon.m  args_firwin.m  args_normalize.m  assert_L.m  assert_classname.m  assert_filterbankinput.m  assert_groworder.m  assert_sigreshape_post.m  assert_sigreshape_pre.m  assert_squarelat.m  block_devices.m  block_interface.m  comp_atrousfilterbank_td.m  comp_cellcoef2tf.m  comp_checkfudim.m  comp_chirpzt.m  comp_circshiftdim1.m  comp_col2diag.m  comp_constructphasereal.m  comp_convsub.m  comp_dct.m  comp_dgt.m  (+163 more)
demos/: Contents.m  demo_DualTreeComplexWT.m  demo_audiocompression.m  demo_audiodenoise.m  demo_audioshrink.m  demo_auditoryfilterbank.m  demo_audscales.m  demo_blockproc.m  demo_blockproc_basicloop.m  demo_blockproc_denoising.m  demo_blockproc_dgtequalizer.m  demo_blockproc_effects.m  demo_blockproc_erblets.m  demo_blockproc_paramequalizer.m  demo_blockproc_pitchshift.m  demo_blockproc_slidingcqt.m  demo_blockproc_slidingerblets.m  demo_blockproc_slidingsgram.m  demo_bpframemul.m  demo_dgt.m  demo_dgt_parametrize.m  demo_dgtrealnonlinear.m  demo_effects.m  demo_equalizer.m  demo_filterbanks.m  demo_filterbanksynchrosqueeze.m  demo_fir.m  demo_firwin.m  demo_framemul.m  demo_frsynabs.m  demo_fwt.m  demo_gabfir.m  demo_gablasso.m  demo_gabmixdual.m  demo_gabmul.m  demo_gabmulappr.m  demo_gabmulappr_paper.m  demo_gaborfir.m  demo_gabormatchingpursuit.m  demo_gammatonefir.m  (+24 more)
deprecated/: Contents.m  arg_normalize.m  comp_gdgt.m  convolve.m  cqt.m  demo_gablasso.m  erblett.m  framematrix.m  gabelitistlasso.m  gabgrouplasso.m  gablasso.m  gabmul.m  gabmuleigs.m  icqt.m  ierblett.m  iufilterbank.m  iunsdgt.m  iunsdgtreal.m  normalize.m  proj_dual.m  scalardistribute.m  test_dgt_fac.m  test_dwilts.m  test_framemulappr.m  test_gdgt.m  test_hermbasis.m  test_ola.m  test_wfac.m  tfmat.m  uwfbtbounds.m  uwpfbtbounds.m
doc/: doxyconfig  doxymain.md
examples/: CMakeLists.txt  Makefile  ex_dgtrealmp.c  example_dgtprocessor.cpp  ltfathelper.h
filterbank/: Contents.m  audfilters.m  audfilters_fir.m  cent_freqs.m  cqt.m  cqtfilters.m  economize_filters.m  erbfilters.m  erblett.m  filterbank.m  filterbankbounds.m  filterbankconstphase.m  filterbankconstphasereal.m  filterbankdual.m  filterbankframediag.m  filterbankfreqz.m  filterbanklength.m  filterbanklengthcoef.m  filterbanklengthsignal.m  filterbankphasegrad.m  filterbankrealbounds.m  filterbankrealdual.m  filterbankrealresponse.m  filterbankrealtight.m  filterbankreassign.m  filterbankresponse.m  filterbankscale.m  filterbanksynchrosqueeze.m  filterbanktight.m  filterbankwin.m  gabfilters.m  gabrealfilters.m  getgausstfr.m  getgausstfr_warp.m  icqt.m  ierblett.m  ifilterbank.m  ifilterbankiter.m  insdgfb.m  nonu2ucfmt.m  (+11 more)
fourier/: Contents.m  PreB.m  TPframe.m  blfilter.m  bspline_dual.m  ceil23.m  ceil235.m  chirpzt.m  convolve.m  dcti.m  dctii.m  dctiii.m  dctiv.m  dctresample.m  dfracft.m  dft.m  divdiff_vector.m  domaincolor.m  domaincolor2.m  dsti.m  dstii.m  dstiii.m  dstiv.m  enspecden.m  expbspval.m  expwave.m  ffracft.m  fftanalytic.m  fftgram.m  fftindex.m  fftreal.m  fftresample.m  fir2long.m  firfilter.m  firkaiser.m  firwin.m  floor23.m  floor235.m  fourierinit.m  gga.m  (+42 more)
frames/: Contents.m  frame.m  frameaccel.m  framebounds.m  frameclength.m  framecoef2native.m  framecoef2tf.m  framecoef2tfplot.m  framediag.m  framedual.m  framegram.m  framegrouplasso.m  framelasso.m  framelength.m  framelengthcoef.m  framelengthsignal.m  framematrix.m  framemul.m  framemuladj.m  framemulappr.m  framemuleigs.m  framenative2coef.m  frameoperator.m  framepair.m  framered.m  framesinit.m  framet.m  frametf2coef.m  frametight.m  frametype.m  framevectornorms.m  frana.m  franaadj.m  franabp.m  franagrouplasso.m  franaiter.m  franalasso.m  franamat.m  franamp.m  frgramian.m  (+12 more)
gabor/: Contents.m  col2diag.m  constructphase.m  constructphasereal.m  dev_dgt_multiplier.m  dgt.m  dgt2.m  dgtlength.m  dgtreal.m  dgtrealmp.m  dsft.m  dwilt.m  dwilt2.m  dwiltlength.m  firkaiser.m  firwin.m  gabconvexopt.m  gabdual.m  gabdualnorm.m  gabfirdual.m  gabfirtight.m  gabframebounds.m  gabframediag.m  gabimagepars.m  gabmixdual.m  gabmul.m  gabmulappr.m  gabmuleigs.m  gaboptdual.m  gabopttight.m  gabphasederiv.m  gabphasederivreal.m  gabphasegrad.m  gabprojdual.m  gabprojkern.m  gabreassign.m  gabtight.m  (+58 more)
modules/libltfat/src/: CMakeLists.txt  ci_utils.c  ci_windows.c  circularbuf_private.h  dct.c  dgtrealmp.c  dgtrealmp_guts.c  dgtrealmp_parbuf.c  dgtrealmp_private.h  dgtrealmp_typeconstant.c  dgtrealwrapper.c  dgtwrapper.c  dst.c  filedefs.mk  filterbankphaseret.c  heap.c  ifilterbank.c  reassign.c  slidgtrealmp.c
modules/libphaseret/src/: CMakeLists.txt  filedefs.mk  gsrtisila.c  legla.c  pghi.c  rtisila.c
(+3268 files in other folders)
