AC_PREREQ([2.62])
AC_INIT([LTFAT], [1.4.0], [http://ltfat.sourceforge.net/contact.php], [ltfat])

AC_PROG_CC
AC_PROG_CXX

# Put in check for MKOCTFILE

AC_CHECK_HEADERS([fftw3.h],[],[AC_MSG_ERROR([fftw was not found])])
# Put in check for blas
# Put in check for lapack
# Put in check for portaudio

AC_OUTPUT